--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# Database
 spring.jpa.show_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/crawler
 spring.datasource.username=postgres
 spring.datasource.password=123456
+# Spring Boot Actuato
+management.endpoint.httptrace.enabled=true
+management.endpoints.web.exposure.include=*
